/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.5/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}


version '1.0.0'

sourceSets {
    main {
    }
}

javafx {
    version = "17"
    modules = [ 'javafx.swing', 'javafx.controls', 'javafx.media', 'javafx.web']
    configuration = 'compileOnly'
}

repositories {
    // Use Maven Central for resolving dependencies.
    // jcenter()
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    implementation fileTree('3rd-party-jars') {
        //include 'jdom-1.0.jar'
        //include 'jgoodies-forms-1.8.0.jar'
        //include 'JoSQL-2.2.jar'
        include 'josql-2.3.jar'
        //include 'gentlyWEB-utils-1.1.jar'
        //include 'gentlyWEB-xml-1.1.jar'
        //include 'gentlyWEB-properties-1.2.jar'
        //include 'gentlyWEB-logging-1.0.jar'
        include 'gentlyweb-properties-3.jar'
        include 'javadiff.jar'

        // Spellchecker
        include 'suggester-1.1.2.jar'

        // TODO Investigate using maven?
        include 'jazzy-core.jar'

        include 'suggester-1.1.2.jar'
        include 'GWordCram-0.1.jar'

        // EPUB lib
        include 'epublib-core-3.1.jar'

        // TODO Remove when no longer using Swing/AWT
        include 'jcalendar-1.4.jar'

        include 'h2mig_pagestore_addon.jar'

    }

    //compile 'org.jsoup:jsoup:1.11.3'
    implementation 'org.jsoup:jsoup:1.11.3'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'

    // XML Parser
    implementation 'pull-parser:pull-parser:2.1.10'

    // Docx4J
    implementation 'org.docx4j:docx4j-JAXB-ReferenceImpl:11.1.8'

    // Bouncy castle crypto
    implementation 'org.bouncycastle:bcprov-jdk15on:1.62'
    implementation 'org.bouncycastle:bcpg-jdk15on:1.62'

    // TODO This is probably not needed now since we can scale images via JavaFX.
    implementation 'org.imgscalr:imgscalr-lib:4.2'

    // DBCP implementation (Apache)
    implementation 'org.apache.commons:commons-dbcp2:2.6.0'

    // Apache Commons IO
    implementation 'commons-io:commons-io:2.11.0'

    // H2 DB
    implementation 'com.h2database:h2:1.3.175'

    // EPUB lib
    // implementation 'nl.siegmann.epublib:epublib-core:3.1'

    // POI hwpf (.doc file reading)
    //implementation 'org.apache.poi:poi-scratchpad:4.1.0'

    // JFreeChart
    implementation 'org.jfree:jfreechart:1.5.0'

    // JFreeChart-FX
    implementation 'org.jfree:jfreechart-fx:1.0.1'

    // Smack
    implementation 'org.igniterealtime.smack:smack-core:4.4.4'
    implementation 'org.igniterealtime.smack:smack-extensions:4.4.4'
    implementation 'org.igniterealtime.smack:smack-tcp:4.4.4'
    implementation 'org.igniterealtime.smack:smack-im:4.4.4'
    implementation 'org.igniterealtime.smack:smack-java8:4.4.4'

    // RichtextFX
    implementation 'org.fxmisc.richtext:richtextfx:0.11.0'
    //implementation 'org.fxmisc.richtext:richtextfx:0.10.9'
    //implementation 'org.fxmisc.richtext:richtextfx:1.0.0-SNAPSHOT'

    // This is temporary for testing changes to a local version of richtextfx.  Ignore.
    // TEMP ADD RICHTEXTFX JARS AND DEPS
/*
     implementation fileTree('d:/reference/java/afester-richtextfx/RichTextFX/richtextfx/build/libs/') {
        //include 'richtextfx-1.0.0-SNAPSHOT.jar'
        include 'richtextfx-0.10.8-rc1.jar'
        include 'flowless-0.6.7.jar'
        include 'reactfx-2.0-M5.jar'
        include 'undofx-2.1.1.jar'
        include 'wellbehavedfx-0.3.3.jar'
    }
*/
    // Flying Saucer (can be removed when no longer using Swing)
    implementation 'org.xhtmlrenderer:flying-saucer-core:9.1.18'

    // JGoodies (remove when no longer using Swing)
    implementation 'com.jgoodies:jgoodies-looks:2.7.0'
    implementation 'com.jgoodies:jgoodies-forms:1.9.0'

    // AnimateFX (test)
    //implementation 'io.github.typhon0:AnimateFX:1.2.1'

    // SVG support
    //implementation 'de.codecentric.centerdevice:javafxsvg:1.3.0'

    // PDF support
    //implementation 'org.apache.pdfbox:pdfbox:2.0.20'

    // DOM4J
    implementation 'org.dom4j:dom4j:2.1.3'

    // JavaFX
    implementation "org.openjfx:javafx-controls:${javafx.version}"
    implementation "org.openjfx:javafx-media:${javafx.version}"

}

jar {
    doFirst {
        file("${sourceSets.main.output.resourcesDir}/data/version.txt").text = "$version"
    }
}


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {

    applicationDefaultJvmArgs =
    [
        '-Djava.locale.providers=COMPAT',
        '--module-path',
        // This is a property that should be defined (usually) in gradle.prpoerties, i.e. module_path=/usr/share/lib/javafx-sdk-12/lib
        '--add-modules=javafx.controls,javafx.swing,javafx.media,javafx.web,java.instrument,jdk.attach',
        '--add-exports',
        'javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
        '--add-exports',
        'javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
        '--add-exports',
        'javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED',
        '--add-exports',
        'javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED',
        '--add-opens',
        'javafx.graphics/javafx.scene.text=ALL-UNNAMED',
        '--add-opens',
        'javafx.graphics/com.sun.javafx.text=ALL-UNNAMED',
        '--add-exports',
        'javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED',
        '--add-exports',
        'javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED',
        '--add-exports',
        'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
        '--add-exports',
        'javafx.web/com.sun.javafx.webkit=ALL-UNNAMED',
        '--add-exports',
        'javafx.web/com.sun.webkit=ALL-UNNAMED'
    ]

    // Define the main class for the application.
    mainClass = 'inkon.Startup'
}

run {
    doFirst {
        jvmArgs = ['--module-path', '/home/bhargavi/javafx-sdk-17.0.9/lib', '--add-modules', ['javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.swing', 'javafx.web'].join(',')]
    }

    task copyToLib(type: Copy) {
        delete "$buildDir/libs"
        into "$buildDir/libs"
        from configurations.runtimeClasspath
    }
    // if (project.hasProperty("module_path")) {
    //     jvmArgs = ["--module-path", project.module_path]
    // }
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
